 * Fix broken behaviour of airborne attacks when placed near bounce world edge
 * Deny placement of airborne attack in “impossible” places in maps with bounce world edge
 * Deny placement of piano beyond bounce world edge
 * Fix cut scenes not being skipped when pressing precise in enemy turn
 * Fix laser sight not working properly when it starts out of map bounds

Styles and schemes:
 + The Specialists: Unlock game scheme
 + The Specialists: Add script parameter support to set custom specialists order
 * Balanced Random Weapon: Fix Lua errors after using Time Box
 * Racer: Fix racer ghost not getting reset after a skip
 * Space Invasion: No longer allow to set start shield above shield limit
 * Battalion, WxW: Crates drop between turns, when appropriate
 * Battalion: Make Sudden Death effects with the base game
 * King Mode: Fix team sometimes not being killed properly if king drowned
 * King Mode: Kill resurrected minions if king is not alive
 * HedgeEditor: Fix major FPS drop when there are a lot of objects

A Classic Fairytale:
 + Backstab: Disable utilities before traitor has been dealt with
 * Backstab: Prevent attacking the cannibals before making the choice
 * First blood: Fix Lua error when hitting Attack after failing the rope challenge
 * General: Clear hazards around cyborg when it appears in cut scenes
 * Various minor tweaks and bugfixes

A Space Adventure:
 + Show your current records at mission start when re-playing one of the challenges
 + Spacetrip: Move flowers of desert planet above cactus
 + Searching in the dust: Enable skip in entire mission
 * Searching in the dust: Fix mission ending when all smugglers are dead
 * Searching in the dust: Fix a lot of broken/stupid smuggler behaviours
 * Chasing the blue hog: Fix player not losing the race when timing out while still having the rope
 * Chasing the blue hog: Fix player winning if Crazy Runner died
 * Getting to the device: Fix clan colors
 * Various minor tweaks and bugfixes

Controls: